--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "mysql2": "^3.9.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
+    "eslint": "^9.2.0",
+    "globals": "^15.1.0",
     "nodemon": "^3.1.0"
   }
 }
